<resources>
    <string name="app_name">RestaurantDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>

    <string name="facebook_app_name">RestaurantDemo</string>
    <string name="app_id">127204864290874</string>
    <string name="exception">Exception: %1$s</string>

    //Signup Activity
    <string name="prompt_title_signup">Create Account</string>
    <string name="prompt_ed_firstname">First Name</string>
    <string name="prompt_ed_lasttname">Last Name</string>
    <string name="prompt_ed_email">Email id</string>
    <string name="prompt_ed_mobile">Mobile</string>
    <string name="prompt_tv_contact">Contact</string>
    <string name="prompt_ed_fname">First Name</string>
    <string name="prompt_ed_lname">Last Name</string>
    <string name="prompt_ed_full_name">Full Name</string>
    <string name="prompt_ed_phone">Phone Number</string>
    <string name="prompt_ed_delivery_address">Delivery Address</string>
    <string name="prompt_ed_password">Password</string>
    <string name="prompt_ed_cpassword">Confirm Password</string>
    <string name="prompt_tv_address">Address</string>
    <string name="prompt_ed_city">City</string>
    <string name="prompt_ed_state">State</string>
    <string name="prompt_ed_landmark">Landmark (optional)</string>

    <string name="prompt_ed_location">Location</string>
    <string name="prompt_ed_company">Company(optional)</string>
    <string name="prompt_ed_houseno">"Flat No./ House No."</string>
    <string name="prompt_ed_locality">"Apartment / Locality name"</string>
    <string name="prompt_ed_postcode">Pincode</string>
    <string name="prompt_ed_other_address">Other Address(optional)</string>
    <string name="prompt_ed_delivery">Delivery instruction(Optional)</string>
    <string name="prompt_chk_tc">Yes, I have read and accepted terms and conditions.</string>
    <string name="prompt_btn_create_account">Create Account</string>
    <string name="prompt_tv_forget_pass"><u>Forgot Password?</u></string>

    //Navigation Drawer

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_login">Log In</string>
    <string name="prompt_logout">Log Out</string>
    <string-array name="prompt_nv_drawer">
        <item name="prompt_myaccount">My Account</item>
        <item name="prompt_myorder">My Order</item>
        <item name="prompt_address">Address</item>
        <item name="prompt_offers">Offers</item>
        <item name="prompt_">Rate us</item>
        <item name="prompt_logout">Log In</item>
        <item name="prompt_contact_us">Contact us</item>
        <item name="prompt_logout">Privacy Policy</item>
        <item name="prompt_logout">Terms and Condition</item>
    </string-array>
    <string name="prompt_nv_name">Welcome Guest</string>
    <string name="prompt_nv_email">Login to get exclusive offer</string>

    //Progress Dialog

    <string name="progress_reset_password">Reset Password Processing...</string>
    <string name="title_activity_selected">SelectedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    //Grid Items

    <string-array name="prompt_grid_Item_Type">
        <item name="prompt_veg">VEG</item>
        <item name="prompt_non_veg">Non VEG</item>
        <item name="prompt_soups">Soups</item>
        <item name="prompt_chinese">Chinese</item>
        <item name="prompt_main_course">Main Course</item>
        <item name="prompt_Rice_noddle">Rice/Noddles</item>
        <item name="prompt_rolls">Rolls</item>
        <item name="prompt_eggs">Eggs</item>
        <item name="prompt_breads">Breads</item>
        <item name="prompt_salad">Salads</item>
        <item name="prompt_dessert">Desserts</item>
        <item name="prompt_drink">Drink</item>
    </string-array>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_address">AddressActivity</string>


    //Toast Message

    <string name="prompt_toast_addrow_delete">Address Deleted...</string>
    <string name="prompt_toast_address_allow">Only Four Address Allowed to save in Your account.</string>


    <string name="prompt_tv_edit_order">Edit Order</string>
    <string name="prompt_tv_save_order">Save Order</string>
    <string name="prompt_tv_add_new_address">Add New Address</string>
    <string name="title_activity_delivery_type">DeliveryTypeActivity</string>
    <string name="title_activity_mobile_confirm">MobileConfirmActivity</string>
    <string name="title_activity_order_complete">OrderCompleteActivity</string>



</resources>
