<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#ffffff"
    tools:context=".NewAddressFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/address_tv_delivery_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/prompt_ed_delivery_address"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_tv_delivery_address">

        <LinearLayout
            android:id="@+id/address_ll_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/address_ed_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_ed_email"
                android:inputType="textAutoComplete"
                android:maxLength="50" />

            <EditText
                android:id="@+id/address_ed_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_full_name"
                android:inputType="textAutoComplete"
                android:maxLength="50" />

            <EditText
                android:id="@+id/address_ed_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_phone"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/address_ed_pincode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_postcode"
                android:inputType="number"
                android:maxLength="6" />

            <EditText
                android:id="@+id/address_ed_delivery_aadress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_delivery_address"
                android:inputType="textAutoComplete"
                android:maxLength="200" />

            <EditText
                android:id="@+id/address_ed_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_city"
                android:inputType="textAutoComplete"
                android:maxLength="30" />

            <EditText
                android:id="@+id/address_ed_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_state"
                android:inputType="textAutoComplete"
                android:maxLength="30" />

            <EditText
                android:id="@+id/address_ed_landmark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_ed_landmark"
                android:inputType="textAutoComplete"
                android:maxLength="100" />

            <Button
                android:id="@+id/address_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_ed_landmark"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_selector"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_margin="30dp"
                android:text="Save"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
